--- a/settings.json
+++ b/settings.json
@@ -12,5 +12,6 @@
     "git.autofetch": true,
     "terminal.integrated.defaultProfile.osx": "zsh",
     "workbench.colorTheme": "Spotify Theme",
-    "explorer.confirmDragAndDrop": false
+    "explorer.confirmDragAndDrop": false,
+    "git.openRepositoryInParentFolders": "always"
 }
